versioned_docs/version-5.3.2/hooks/useOutsideClick.mdx
---
sidebar_position: 1
id: useOutsideClick
title: useOutsideClick
---

The `useOutsideClick` hook allows you to detect clicks that **occur outside a specific DOM element**, triggering a callback function when this happens.\
It’s ideal for closing modals, dropdowns, tooltips, or any component that should dismiss when clicking elsewhere on the page.

## Syntax
```jsx
useOutsideClick(
  ref: RefObject<HTMLElement>,
  callback: (event: MouseEvent | TouchEvent) => void,
  deps?: DependencyList
): void;
```

### Parameters
| Name   | Type | Description
| :-----     | :----      | :----
| Refs (required)| `RefObject<HTMLElement>`  | React ref to the element to detect outside clicks from
| Callback (required) | `(event: MouseEvent or TouchEvent) => void` | Function to run when an outside click is detected.
| deps (optional)|`DependencyList`| Dependency array for when to refresh the callback behavior

import CodeExample from "@site/src/components/CodeExample"
import Code_hook_useOutsideClick_BasicExample from '!!raw-loader!@site/src/examples/5.3.2/hook/useOutsideClick/BasicExample.tsx';
import Demo_hook_useOutsideClick_BasicExample from '@site/src/examples/5.3.2/hook/useOutsideClick/BasicExample';

## Example

It listens for clicks outside the box and automatically hides it whenever you click anywhere else on the page.
<CodeExample
  demo={Demo_hook_useOutsideClick_BasicExample}
  code={Code_hook_useOutsideClick_BasicExample}
/>